--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome To The Alco Ticket System</h1>
+    <h1>Welcome To The Alco Water Ticket System</h1>
     <br>
     <div id="passwordForm">
         <h2>Please enter the password</h3>
