--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <div id="app" style="display:none;"></div> <!-- Placeholder for dynamic content -->
 
     <script>
-        window.location.href = 'https://alcoticket123-87aaf6ac7075.herokuapp.com/';
+        window.location.href = 'https://alcoticket.onrender.com/';
     </script>
 </body>
 </html>
