--- a/Development/index.html
+++ b/Development/index.html
@@ -167,6 +167,7 @@
         loadTickets();  // Reload tickets after submission
     }
 };
+
 window.loadTickets = async () => {
     console.log("Loading tickets...");
     const openTicketsList = document.getElementById('openTicketsList');
@@ -184,10 +185,15 @@ window.loadTickets = async () => {
         const ticket = doc.data();
         console.log(`Processing ticket: ${doc.id}`, ticket);
 
+        // Format the creation date
+        const createdAt = ticket.created.toDate(); // Convert timestamp to Date object
+        const formattedDate = createdAt.toLocaleDateString("en-US", { year: 'numeric', month: 'long', day: 'numeric' });
+
         let ticketHTML = `<div class='ticket-item' style='display: block;'>
             <h2>${ticket.title}</h2>
             <b>From:</b> ${ticket.requestor}
             <p>${ticket.priority} Priority</p>
+            <p>Created: ${formattedDate}</p>
             <p>${ticket.status}</p>
             <div id='ticketsinside'>
                 ${ticket.description}
@@ -208,6 +214,7 @@ window.loadTickets = async () => {
         }
     });
 };
+
 
 function getAssignmentControl(docId, status) {
     if (status === "New") {
