--- a/Development/index.html
+++ b/Development/index.html
@@ -239,7 +239,7 @@ button {
     
 <div id = "insidemembers">
 
-<p><h3> Remove a memeber from the team </h3> </p>
+<p><h3> Remove a member from the team </h3> </p>
 
         <div id="memberList">
 		
