--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
     <title>App Interface</title>
     <style>
 	
-	body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            background: linear-gradient(to right, #83a4d4, #b6fbff);
-            margin: 0;
-			align-items: center;
 
-        }
-		
 		
 
         #passwordForm input[type="password"], #passwordForm button {
@@ -55,7 +47,7 @@
 	
 	<center>
 	<div id="box">
-	<h1>Welcome To SCADA Ticket System</h1>
+	<h1>Welcome To The SCADA Ticketing System</h1>
 	</div>
 	
 </head>
