--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>App Interface</title>
+    <title>SCADA TICKETING</title>
     <style>
 	
 
