--- a/Development/index.html
+++ b/Development/index.html
@@ -19,8 +19,8 @@
     margin-bottom: 20px;
 	 border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 20px;              /* Some padding inside the border */
-        margin: 10px;               /* Margin outside the border */
+        padding: 0px;              /* Some padding inside the border */
+        margin: 0px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
         width: 100%;               /* Fixed width */
         height: 100% 
@@ -33,7 +33,7 @@
     margin-bottom: 20px;
 	 border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 20px;              /* Some padding inside the border */
+        padding: 0px;              /* Some padding inside the border */
         margin: 10px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
         width: 100%;               /* Fixed width */
@@ -54,10 +54,10 @@
 #insidemembers {
         border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 20px;              /* Some padding inside the border */
+        padding: 0px;              /* Some padding inside the border */
         margin: 10px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
-        width: 80%;               /* Fixed width */
+        width: 90%;               /* Fixed width */
         height: 100%               /* Automatic height adjustment */
     }
 	
@@ -74,13 +74,13 @@ button {
         display: flex;              /* Enable Flexbox */
         flex-wrap: wrap;            /* Allow items to wrap onto the next line */
         justify-content: center; /* Distribute space evenly around the items */
-        width: 100%;                /* Take full width of the container */
+               /* Take full width of the container */
     }
     
     .ticket-item {
         border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 20px;              /* Some padding inside the border */
+        padding: 0px;              /* Some padding inside the border */
         margin: 10px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
         width: calc(45% - 20px);    /* Calculate width, subtracting margins */
@@ -91,23 +91,26 @@ button {
 	#ticketsinside {
         border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 20px;              /* Some padding inside the border */
+        padding: 0px;              /* Some padding inside the border */
         margin: 10px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
-        width: 80%;               /* Fixed width */
+        width: 90%;               /* Fixed width */
         height: 10%               /* Automatic height adjustment */
     }
 	
 	
 
     #tickets {
-        border: 4px solid lightblue; /* Set the border color */
+        display: block;
+    justify-content: center;
+    margin-bottom: 20px;
+	 border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 20px;              /* Some padding inside the border */
+        padding: 0px;              /* Some padding inside the border */
         margin: 10px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
-        width: 100%;               /* Fixed width */
-        height: 100%               /* Automatic height adjustment */
+        width: 95%;               /* Fixed width */
+        height: 100%              /* Automatic height adjustment */
     }
 
     /* Existing styles */
