--- a/Development/index.html
+++ b/Development/index.html
@@ -19,10 +19,10 @@
     margin-bottom: 20px;
 	 border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 0px;              /* Some padding inside the border */
+        padding: 10px;              /* Some padding inside the border */
         margin: 0px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
-        width: 100%;               /* Fixed width */
+        width: 97%;               /* Fixed width */
         height: 100% 
 }
    
@@ -33,7 +33,7 @@
     margin-bottom: 20px;
 	 border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 0px;              /* Some padding inside the border */
+        padding: 10px;              /* Some padding inside the border */
         margin: 10px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
         width: 100%;               /* Fixed width */
@@ -80,7 +80,7 @@ button {
     .ticket-item {
         border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 0px;              /* Some padding inside the border */
+        padding: 10px;              /* Some padding inside the border */
         margin: 10px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
         width: calc(45% - 20px);    /* Calculate width, subtracting margins */
@@ -91,7 +91,7 @@ button {
 	#ticketsinside {
         border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 0px;              /* Some padding inside the border */
+        padding: 10px;              /* Some padding inside the border */
         margin: 10px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
         width: 90%;               /* Fixed width */
@@ -106,7 +106,7 @@ button {
     margin-bottom: 20px;
 	 border: 4px solid lightblue; /* Set the border color */
         border-radius: 10px;        /* Rounded corners */
-        padding: 0px;              /* Some padding inside the border */
+        padding: 10px;              /* Some padding inside the border */
         margin: 10px;               /* Margin outside the border */
         background-color: #ffffff;  /* Light blue background */
         width: 95%;               /* Fixed width */
@@ -156,6 +156,7 @@ button {
 		
 		
 		<div id="ticketsinside">
+		<br><br>
         <input type="text" id="ticketTitle" placeholder="Ticket Issue"><br>
         <input type="text" id="ticketName" placeholder="Requester"><br>
         <textarea id="ticketDesc" placeholder="Description"></textarea><br>
@@ -165,6 +166,7 @@ button {
             <option value="High">High Priority</option>
         </select><br>
         <button onclick="submitTicket()">Submit Ticket</button>
+		<br><br><br>
     </div>
 	</div>
 
@@ -235,6 +237,7 @@ button {
 	<div id = "insidemembers">
 	<p><h3> Add a new member to the team </h3></p>
 	<button onclick="addMember()"> Add New Member</button>
+	<br><br>
 	</div>
 	
 	
@@ -254,6 +257,7 @@ button {
         
         
         <button onclick="deleteMember()">Delete Member</button>
+		<br><br><br><br><br>
 </div>
 		</div>
 		
@@ -462,7 +466,7 @@ function getAssignmentControl(docId, status) {
                     ${optionsHTML}
                 </select>
                 <br><button onclick='deleteTicket("${docId}")'>Delete</button> 
-                <button onclick='assignTicket("${docId}")'>Save</button> <br><br>`;
+                <button onclick='assignTicket("${docId}")'>Save</button> <br><br><br>`;
     } else if (status === "Recently Deleted") {
         // Only show a "Restore" button for recently deleted tickets
         return `<button onclick='restoreTicket("${docId}")'>Restore</button><br><br>`;
